# flight_navigator

./: pyproject.toml
flight_navigator/: main.py
