[tool.poetry]
name = "flight_navigator"
version = "0.1.0"
description = ""
authors = ["Tomas Janicek <tomasjanicek221@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.3.1"
flake8 = "^4.0.1"
pytest = "^7.0.1"
pylint = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

pip install mypy black isort autoflake flake8 pytest pylint
